Fix tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@ set -g history-limit 2048
 set -g base-index 1
 
 set-option -g mouse-select-pane on
+set-option -g mouse on
 
 unbind r
 bind r source-file ~/.tmux.conf
