--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,12 @@
-setw -g utf8 on
-set-option -g status-utf8 on
+#setw -g utf8 on
+#set-option -g status-utf8 on
 
 set -g history-limit 2048
 
 set -g base-index 1
 
-set-option -g mouse-select-pane on
-set-option -g mouse on
+#set-option -g mouse-select-pane on
+#set-option -g mouse on
 
 unbind r
 bind r source-file ~/.tmux.conf
@@ -43,8 +43,8 @@ setw -g window-status-bg black
 setw -g window-status-current-fg green
 setw -g window-status-bell-attr default
 setw -g window-status-bell-fg red
-setw -g window-status-content-attr default
-setw -g window-status-content-fg yellow
+#setw -g window-status-content-attr default
+#setw -g window-status-content-fg yellow
 setw -g window-status-activity-attr default
 setw -g window-status-activity-fg yellow
 
