--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,8 @@ set -g base-index 1
 #set-option -g mouse-select-pane on
 #set-option -g mouse on
 
+set -s escape-time 0
+
 unbind r
 bind r source-file ~/.tmux.conf
 
