Set tmux base idx to 0

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@
 
 set -g history-limit 2048
 
-set -g base-index 1
+#set -g base-index 1
 
 #set-option -g mouse-select-pane on
 #set-option -g mouse on
