--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,7 @@
-#setw -g utf8 on
-#set-option -g status-utf8 on
-
 set -g history-limit 2048
-
 #set -g base-index 1
 
-#set-option -g mouse-select-pane on
-#set-option -g mouse on
+set-option -g mouse on
 
 set -s escape-time 0
 
@@ -25,30 +20,14 @@ bind F swap-window -t +1
 
 # Statusbar Color Palatte
 set-option -g status-justify left
-set-option -g status-bg black
+#set-option -g status-bg black
+set-option -g status-bg default
 set-option -g status-fg white
 set-option -g status-left-length 40
 set-option -g status-right-length 80
 
-# Pane Border Color Palette
-set-option -g pane-active-border-fg green
-set-option -g pane-active-border-bg black
-set-option -g pane-border-fg white
-set-option -g pane-border-bg black
-
-# Message Color Palette
-set-option -g message-fg black
-set-option -g message-bg green
-
-# Window Status Color Palette
-setw -g window-status-bg black
-setw -g window-status-current-fg green
-setw -g window-status-bell-attr default
-setw -g window-status-bell-fg red
-#setw -g window-status-content-attr default
-#setw -g window-status-content-fg yellow
-setw -g window-status-activity-attr default
-setw -g window-status-activity-fg yellow
+set -g pane-border-style "fg=magenta"
+set -g pane-active-border-style "fg=magenta"
 
 
 ### UI
@@ -65,9 +44,10 @@ set-option -g set-titles on
 set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name,active (or not)
 
 # Statusbar Adjustments
-set -g status-left "#[fg=red] #H#[fg=green]:#[fg=white]#S#[fg=green] |#[default]"
+#set -g status-left "#[fg=red] #H#[fg=green]:#[fg=white]#S#[fg=green] |#[default]"
+set -g status-left "#[fg=cyan]#[default]"
 
 # Show performance counters in statusbar
 # Requires https://github.com/thewtex/tmux-mem-cpu-load/
-set -g status-interval 4
-set -g status-right "#[fg=green] | #[fg=white]#(tmux-mem-cpu-load)#[fg=green] | #[fg=cyan]%H:%M #[default]"
+set -g status-interval 2
+set -g status-right "#[fg=cyan] | #[fg=cyan]#(tmux-mem-cpu-load --interval 2) | #S | #[fg=cyan]%H:%M | #[default]"
