--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,5 +1,6 @@
 {
   "solargraph.checkGemVersion": false,
   "typescript.suggestionActions.enabled": false,
-  "svelte.enable-ts-plugin": true
+  "svelte.enable-ts-plugin": true,
+  "rust-analyzer.checkOnSave.target": []
 }
