--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
 set -g history-limit 2048
-#set -g base-index 1
+
+set -s set-clipboard on
+
+set-option -g status-position bottom
 
 set-option -g mouse on
 
@@ -13,25 +16,15 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
 bind e previous-window
 bind f next-window
 bind E swap-window -t -1
 bind F swap-window -t +1
-
-# Statusbar Color Palatte
-set-option -g status-justify left
-#set-option -g status-bg black
-set-option -g status-bg default
-set-option -g status-fg white
-set-option -g status-left-length 40
-set-option -g status-right-length 80
-
-set -g pane-border-style "fg=magenta"
-set -g pane-active-border-style "fg=magenta"
-
-
-### UI
-###########################################################################
 
 # Notification
 setw -g monitor-activity on
@@ -41,13 +34,18 @@ set-option -g visual-bell off
 
 # Automatically set window titles
 set-option -g set-titles on
-set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name,active (or not)
 
-# Statusbar Adjustments
-#set -g status-left "#[fg=red] #H#[fg=green]:#[fg=white]#S#[fg=green] |#[default]"
-set -g status-left "#[fg=cyan]#[default]"
+set-option -g status "on"
 
-# Show performance counters in statusbar
-# Requires https://github.com/thewtex/tmux-mem-cpu-load/
-set -g status-interval 2
-set -g status-right "#[fg=cyan] | #[fg=cyan]#(tmux-mem-cpu-load --interval 2) | #S | #[fg=cyan]%H:%M | #[default]"
+# vim: set ft=tmux tw=0 nowrap:
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'fabioluciano/tmux-tokyo-night'
+
+set -g @theme_variation 'moon'
+# set -g @theme_left_separator ''
+# set -g @theme_right_separator ''
+
+run '~/.tmux/plugins/tpm/tpm'
