Switching to tokyonight-night

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,18 +34,13 @@ set-option -g visual-bell off
 
 # Automatically set window titles
 set-option -g set-titles on
-
 set-option -g status "on"
 
-# vim: set ft=tmux tw=0 nowrap:
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'fabioluciano/tmux-tokyo-night'
 
-set -g @theme_variation 'moon'
-# set -g @theme_left_separator ''
-# set -g @theme_right_separator ''
+set -g @plugin "janoamaral/tokyo-night-tmux"
 
 run '~/.tmux/plugins/tpm/tpm'
